# CodeSide

./: README.md
clients/cpp/: CMakeLists.txt  Consts.h  MyStrategy.cpp  MyStrategy.hpp  main.cpp  zip.sh
clients/cpp/arena/: Arena.cpp  Arena.hpp  MinMax.cpp  MinMax.h  Simulation.cpp  Simulation.hpp  Target.cpp  Target.h
clients/cpp/model/: Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  Item.cpp  Item.hpp  JumpState.cpp  JumpState.hpp  Level.cpp  Level.hpp  LootBox.cpp  LootBox.hpp  Mine.cpp  Mine.hpp  Player.cpp  Player.hpp  PlayerView.cpp  PlayerView.hpp  Properties.cpp  Properties.hpp  ServerMessageGame.cpp  ServerMessageGame.hpp  Unit.cpp  Unit.hpp  UnitAction.cpp  UnitAction.hpp  Vec2.hpp  Vec2Double.cpp  Vec2Double.hpp  Vec2Float.cpp  Vec2Float.hpp  Weapon.cpp  Weapon.hpp  WeaponParams.hpp
clients/cpp/utils/: Geometry.h  Helper.h  Segment.cpp  Segment.h
clients/cpp/viewer/: OpenGLViewer.h
